# dota2-analysis

./: .dockerignore  .gitignore  Dockerfile  Dockerfile.cn  PRD.md  README.md  fly.toml  使用8001端口启动.md  修复说明-API优化和背景图.md  开发计划.md  强制结束进程.bat  快速解决Git推送.md  快速重启指南.md  排查问题步骤.md  本地背景图片配置完成.md  查看后端日志说明.md  测试日志输出.md  清理缓存并重启.bat  环境设置说明.md  立即执行-解决日志问题.md  立即执行这些步骤.md  解决Git推送问题.md  解决端口占用问题.md  调试日志问题.md  部署指南.md  部署步骤详细版.md  阶段4测试指南.md
backend/: README.md  pyproject.toml  requirements-dev.txt  requirements.txt
backend/src/: __init__.py  main.py
backend/src/api/: __init__.py
backend/src/api/v1/: __init__.py  router.py  schemas.py
backend/src/core/: __init__.py  config.py  logging.py
backend/src/services/: __init__.py  analysis.py  opendota.py
frontend/: .eslintrc.cjs  .prettierrc.json  README.md  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.vue  main.ts  style.css
frontend/src/pages/: HomePage.vue
